# dbt_training

./: .gitignore  README.md  pyproject.toml
databricksfiles/: Raw Data.ipynb
dbt_wh/: dbt_project.yml
dbt_wh/analyses/: jinja0.sql  jinja1.sql  jinja3.sql
dbt_wh/models/bronze/: address.sql  category.sql  customer.sql  product.sql  properties copy.txt  properties.yml  properties_bronze.yml  purchase.sql
dbt_wh/models/raw/: sources.yml
dbt_wh/tests/: above_target.sql
dbt_wh/tests/generic/: generic_test.sql
