[project]
name = "warehousetest"
version = "0.1.0"
description = ""
authors = [
    {name = "ErickVisone",email = "erickvisone@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "faker (>=40.1.2,<41.0.0)",
    "dbt-core (>=1.11.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
